OPENIDM-482 - Experimental version of Windows Service launcher Automate OpenIDM start in functional test project